--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
   <style>
     body {
       width: 400px;
       padding: 20px;
-      font-family: system-ui, -apple-system, sans-serif;
+      font-family: 'Parkinsans', sans-serif;
     }
 
     .summary-container {
@@ -31,17 +34,18 @@
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      opacity: 0.3;
+      display: none;
     }
 
     .light.red { background-color: #dc2626; }
     .light.yellow { background-color: #eab308; }
     .light.green { background-color: #16a34a; }
-    .light.active { opacity: 1; }
+    .light.active { display: block; }
+    
 
     .score-text {
       font-size: 14px;
-      font-weight: 500;
+      font-weight: 600;
     }
 
     .category {
@@ -52,6 +56,12 @@
       border: 1px solid #e5e5e5;
     }
 
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }   
+
     .category-header {
       font-weight: 600;
       margin-bottom: 8px;
@@ -61,8 +71,17 @@
     }
 
     .category-content {
+      display: none;
       font-size: 14px;
       line-height: 1.6;
+    }
+
+    .category-content.active {
+      display: block;
+    }
+
+    .category-header {
+      cursor: pointer;
     }
 
     .loading {
@@ -87,7 +106,7 @@
   <div id="result-container" style="display:none;">
     <div class="privacy-score">
       <div class="traffic-lights">
-        <div class="light red"></div>
+        <div class="light red" ></div>
         <div class="light yellow"></div>
         <div class="light green"></div>
       </div>
