--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -130,6 +130,13 @@
       margin-top: 5px;
     }
 
+    .policy-url {
+      font-size: 12px;
+      color: #888;
+      margin-top: 10px;
+      word-break: break-all;
+    }
+
   </style>
 </head>
 <body>
@@ -145,6 +152,7 @@
       
     </div>
     <div id="summary"></div>
+    <div id="policy-url" class="policy-url"></div> <!-- New section for URL -->
   </div>
   <script type="module" src="aiProvider.js"></script>
   <script type="module" src="popup.js"></script>
